# vanguard-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  dev.db  pyproject.toml  requirements.txt  test.db
backend/app/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  observability.py  schemas.py  security.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/routers/: alerts.py  auth.py  detections.py  events.py  health.py  incidents.py  jobs.py  metrics.py  platform.py
backend/app/schemas/: alerts.py  auth.py  detections.py  events.py  metrics.py
backend/app/services/: ai_assistant.py  audit.py  auth_service.py  dependencies.py  detection_catalog.py  detection_engine.py  detection_service.py  feature_flags.py  ingestion_service.py  job_service.py  metrics_service.py  pagination.py  seed.py  seed_scenarios.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py  test_additional_coverage.py  test_alerts.py  test_api.py  test_auth.py  test_core_unit.py  test_coverage_gaps.py  test_detection_engine_phase1.py  test_events.py  test_extended_coverage.py  test_metrics.py  test_rbac.py  test_services_unit.py
docs/: ARCHITECTURE.md  AUDIT_AND_IMPLEMENTATION_PLAN.md  DEMO_RUNBOOK.md  DEPLOYMENT.md  PORTS.md  STYLEGUIDE.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+34 files in other folders)
